updated Italian translation

--- a/po/wesnoth-ai/it.po
+++ b/po/wesnoth-ai/it.po
@@ -4,13 +4,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2013.
 #
-# Antonio Rosella <arosella@yahoo.com> 2014-2018
+# Antonio Rosella <arosella@yahoo.com> 2014-2019
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-09 08:38 UTC\n"
-"PO-Revision-Date: 2018-09-09 17:48+0200\n"
+"PO-Revision-Date: 2019-01-27 21:06+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: \n"
 "Language: it\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [ai]: id=ai_default_rca
 #: data/ai/ais/ai_default_rca.cfg:9
@@ -598,7 +598,7 @@ msgid ""
 msgstr ""
 "In questo scenario, l’IA che controlla la fazione umana ad est è programmata "
 "per formare una linea difensiva nei pressi del passo e respingere gli orchi "
-"più a lungo possibile. Vuoi controllare la fazione degli orchi o preferisci "
+"più a lungo possibile. Vuoi controllare la squadra degli orchi o preferisci "
 "lasciare il controllo all’IA di default (RCA)?"
 
 #. [option]
@@ -674,26 +674,6 @@ msgstr ""
 
 #. [message]: speaker=Rowck
 #: data/ai/micro_ais/scenarios/dragon.cfg:91
-#, fuzzy
-#| msgid ""
-#| "Hi there. I am Rowck and here is what I do:\n"
-#| "When hungry, I move around part of the map in a random wander until I get "
-#| "into range of an enemy. If enemies are within range, I attack and devour "
-#| "the weakest of them. After that, I retreat to my rest location, where I "
-#| "stay for a certain number of turns or until fully healed.\n"
-#| "A few details (features, not bugs, but can be changed if desired):\n"
-#| "- If my way home is blocked on the return, the normal RCA AI takes over "
-#| "my behavior.\n"
-#| "- I will, however, attack any enemy occupying my rest hex, if I can get "
-#| "there.\n"
-#| "- A kill only makes me go home when I am the attacker, not as defender.\n"
-#| "- Occasionally I will not move at all while wandering (a dragon has to "
-#| "rest sometimes!)\n"
-#| "\n"
-#| "Note: The Hunter AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "Hi there. I am Rowck and here is what I do:\n"
 "When hungry, I move around part of the map in a random wander until I get "
@@ -721,7 +701,7 @@ msgstr ""
 "dove rimango a digerire per un certo numero di turni, oppure finché non "
 "recupero tutti i miei Punti Ferita.\n"
 "Qualche dettaglio (caratteristiche, non bachi, ma che possono essere "
-"modificate):\n"
+"modificate se desiderato):\n"
 "- Se la via di ritorno verso casa è bloccata, la IA RCA normale prenderà il "
 "controllo del mio comportamento.\n"
 "- Attaccherò comunque qualsiasi nemico che occupi l’esagono con il mio nido, "
@@ -730,7 +710,7 @@ msgstr ""
 "- Occasionalmente non mi muoverò affatto mentre girovago in giro (ogni tanto "
 "anche un drago si riposa!)\n"
 "\n"
-"Nota: la IA «Cacciatore » è programmata come Micor IA. Una Micro IA può "
+"Nota: la IA «Cacciatore » è programmata come Micro IA. Una Micro IA può "
 "essere facilmente aggiunta ed adattata alle esigenze di uno scenario "
 "utilizzando soltanto il linguaggio WML e il tag [micro_ai]. Per avere altre "
 "informazioni, visita la <span color='#00A000'>pagina wiki Micro AI</span> "
@@ -843,7 +823,7 @@ msgstr "Sergente Aethubry"
 #. [set_menu_item]: id=m01_new_footpad
 #: data/ai/micro_ais/scenarios/goto.cfg:339
 msgid "Place Side 1 Footpad"
-msgstr "Piazza un galoppino della Fazione 1"
+msgstr "Piazza un galoppino della Squadra 1"
 
 #. [set_menu_item]: id=m02_kill_unit
 #. [set_menu_item]: id=m05_kill_unit
@@ -860,22 +840,6 @@ msgstr "Disabilita il controllo umano per la Squadra 1"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/goto.cfg:419
-#, fuzzy
-#| msgid ""
-#| "This scenario demonstrates a variety of different uses of the Goto Micro "
-#| "AI. All AI sides are controlled by this MAI in one way or another (except "
-#| "for the saurians, which are run by the Lurkers Micro AI). Messages will "
-#| "be displayed throughout the scenario to point out what the units are "
-#| "doing.\n"
-#| "\n"
-#| "The player controls Side 1. There are right-click context menu options "
-#| "for adding Side 1 units to the map and for taking them off again. This is "
-#| "useful mostly for testing how the Side 3 guardians react.\n"
-#| "\n"
-#| "Note: The Goto AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario demonstrates a variety of different uses of the Goto Micro AI. "
 "All AI sides are controlled by this MAI in one way or another (except for "
@@ -897,9 +861,9 @@ msgstr ""
 "«Osservatore»). Diversi messaggi verranno mostrati lungo tutto lo scenario "
 "per spiegare cosa stiano facendo le varie unità.\n"
 "\n"
-"Il giocatore controlla la fazione 1. Ci sono dei menu contestuali attivabili "
+"Il giocatore controlla la squadra 1. Ci sono dei menu contestuali attivabili "
 "col tasto destro del mouse che permettono sia di piazzare che di togliere "
-"dalla mappa unità della fazione 1. Tutto ciò è molto utile per testare come "
+"dalla mappa unità della squadra 1. Tutto ciò è molto utile per testare come "
 "reagiscono le sentinelle della fazione 3.\n"
 "\n"
 "Nota: La Micro IA «Vai a» è codificata come Micro IA. Una Micro IA può "
@@ -1008,7 +972,7 @@ msgstr ""
 "Tu sei pazzo. Sarà anche la via più breve in linea d’aria, ma ci metterai "
 "un’eternità ad attraversare quelle montagne.\n"
 "\n"
-"Nota: i messaggeri sono controllati dalle definizioni dalla Micro IA 'Vai a' "
+"Nota: i messaggeri sono controllati dalle definizioni dalla Micro IA «Vai a» "
 "che differiscono soltanto per una singola linea, 'use_straight_line=yes/no'."
 
 #. [message]: speaker=unit
@@ -1803,17 +1767,6 @@ msgstr "Note"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/lurkers.cfg:475
-#, fuzzy
-#| msgid ""
-#| "You can use the right-click context menu to add additional lurkers.\n"
-#| "\n"
-#| "Any unit not adjacent to swamp (and water, for the nagas) is safe from "
-#| "the lurkers, thus it is easy to keep Pekzs from being attacked.\n"
-#| "\n"
-#| "The Lua Lurker AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "You can use the right-click context menu to add additional lurkers.\n"
 "\n"
@@ -1925,24 +1878,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/messenger_escort.cfg:152
-#, fuzzy
-#| msgid ""
-#| "The Messenger Escort AI will try to move the dragoon messenger to the "
-#| "signpost in the north, while protecting him as well as possible with the "
-#| "other units. Vanak's orcs need to stop him.\n"
-#| "\n"
-#| "Note that the messenger route is set up through a series of waypoints "
-#| "here simply to demonstrate how to use waypoints. On this map, using only "
-#| "a single waypoint at the end of the route would work just as well (or "
-#| "probably even better).\n"
-#| "\n"
-#| "Also note that the messenger does not have to get exactly to each "
-#| "signpost (except for the last one), getting close is good enough.\n"
-#| "\n"
-#| "The Messenger Escort AI is coded as a Micro AI. A Micro AI can be added "
-#| "and adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "The Messenger Escort AI will try to move the dragoon messenger to the "
 "signpost in the north, while protecting him as well as possible with the "
@@ -2116,7 +2051,7 @@ msgstr ""
 "Al contrario, io sono una sentinella che pattuglia una zona, in un certo "
 "senso, la parte meridionale della mappa. Questa IA è implementata con il tag "
 "[micro_ai] Guardian. Sono qui principalmente per dimostrare come si possano "
-"implementare diverse Micro IA nella stessa fazione. Per ulteriori dettagli "
+"implementare diverse Micro IA nella stessa squadra. Per ulteriori dettagli "
 "sui diversi tipi di IA sentinella, c’è un apposito scenario di test dedicato "
 "a questo tema."
 
@@ -2134,7 +2069,7 @@ msgstr ""
 "sotto la metà del massimo o al quinto turno, qualunque sia l’evento che "
 "accade per primo.\n"
 "\n"
-"Questa è una IA diversa da quella delle Pattuglie della fazione 2."
+"Questa è una IA diversa da quella delle Pattuglie della squadra 2."
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/patrols.cfg:239
@@ -2325,7 +2260,7 @@ msgid ""
 "<span font='16'>I'll play Langzhar's side (to see how Koorzhar's units "
 "target Rossauba)</span>"
 msgstr ""
-"<span font='16'>Guiderò la fazione di Langzhar ( per vedere come le unità di "
+"<span font='16'>Guiderò la squadra di Langzhar ( per vedere come le unità di "
 "Koorzhar puntano Rossauba)</span>"
 
 #. [option]
@@ -2334,7 +2269,7 @@ msgid ""
 "<span font='16'>I'll play Koorzhar's side (to see how Langzhar's units "
 "protect Rossauba)</span>"
 msgstr ""
-"<span font='16'>Guiderò la fazione di Koorzhar (per vedere come le unità di "
+"<span font='16'>Guiderò la squadra di Koorzhar (per vedere come le unità di "
 "Langzhar proteggono Rossauba)</span>"
 
 #. [objectives]
@@ -2408,7 +2343,7 @@ msgid ""
 "make differences more obvious."
 msgstr ""
 "Si tratta semplicemente di osservare i diversi reclutamenti di entrambe le "
-"fazioni e verificare che tutto avvenga come vi ci si aspetta. La lista delle "
+"squadre e verificare che tutto avvenga come vi ci si aspetta. La lista delle "
 "unità reclutabili comprende unità dal livello 0 a livello 2, in modo da "
 "rendere le differenze più ovvie."
 
@@ -2523,7 +2458,7 @@ msgstr ""
 "Nello scenario “Difesa collo di bottiglia”, un piccolo gruppo di soldati "
 "umani ha ricevuto istruzioni per tenere un passo montano contro una grossa "
 "orda di orchi. Puoi osservarli mentre combattono contro la IA standard (RCA) "
-"o controllare la fazione degli orchi."
+"o controllare la squadra degli orchi."
 
 #. [message]: speaker=Grnk
 #. [set_menu_item]: id=m02_swamp_lurkers
@@ -2613,8 +2548,8 @@ msgid ""
 "is available. You can watch the two AIs fight it out, or take control of "
 "either side to explore how the opposing AI behaves."
 msgstr ""
-"Questo scenario contiene una fazione che protegge il cammino di un mago "
-"diretto verso una precisa meta. Contemporaneamente, un’altra fazione è stata "
+"Questo scenario contiene una squadra che protegge il cammino di un mago "
+"diretto verso una precisa meta. Contemporaneamente, un’altra squadra è stata "
 "modificata in modo da dare priorità all’attacco del mago, anche se fosse "
 "disponibile un bersaglio migliore (criterio standard dell’IA). Puoi "
 "osservare le due IA che combattono tra loro, o puoi prendere il controllo di "
@@ -2635,7 +2570,7 @@ msgid ""
 "here. The same algorithm as for scenario \"Protect Unit\" is used."
 msgstr ""
 "Questo è un rifacimento dello scenario “Gli elfi assediati” della campagna "
-"“L’erede al trono”, con la sola variante che l’IA comanda la fazione di "
+"“L’erede al trono”, con la sola variante che l’IA comanda la squarda di "
 "Konrad. Utilizza lo stesso algoritmo dello scenario “Proteggere una unità”."
 
 #. [message]: speaker=Grnk
@@ -2742,7 +2677,7 @@ msgid ""
 "circumstances."
 msgstr ""
 "Questo scenario presenta una semplice dimostrazione di si possa programmare "
-"l’IA “Curatori”, che usa i curatori di una fazione per guarire unità ferite "
+"l’IA “Curatori”, che usa i curatori di una squadra per guarire unità ferite "
 "o in pericolo, piuttosto che partecipare attivamente al combattimento in "
 "qualsiasi circostanza."
 
@@ -2794,7 +2729,7 @@ msgstr ""
 "(modificabile) fintanto che una specifica condizione (modificabile) accade. "
 "Dopo di che le unità vengono lasciate libere di seguire il comportamento di "
 "un’altra IA. Lo scenario fa anche vedere come si possano combinare due Micro "
-"IA nella stessa fazione utilizzando la Micro AI “Scortare un Messaggero” che "
+"IA nella stessa squadra utilizzando la Micro AI “Scortare un Messaggero” che "
 "entra in azione dopo la prima."
 
 #. [message]: speaker=Grnk
@@ -2988,27 +2923,6 @@ msgstr "Piazzamento Pipistrello squadra 2"
 
 #. [message]: speaker=narrator
 #: data/ai/micro_ais/scenarios/swarm.cfg:144
-#, fuzzy
-#| msgid ""
-#| "This scenario features bats moving around in a swarm. Without adjacent "
-#| "enemies, they simply try to stay together and at a certain distance from "
-#| "enemies. However, if an enemy unit is close to any bat, the swarm "
-#| "scatters. This is particular fun to watch when one places an enemy unit "
-#| "in the middle of the swarm. After being scattered, the swarm members "
-#| "slowly rejoin, but not in a very organized way. Sub-swarms or individual "
-#| "bats might roam around for quite some time before they find their way "
-#| "back. It is also possible that individual bats (or small groups) split "
-#| "off from the larger swarm at times.\n"
-#| "\n"
-#| "The player controls a side of gryphons, each of which is given 99 moves "
-#| "so that the reaction of the swarm to enemies can be tested easily. There "
-#| "are also several right-click options, for example for adding bats or "
-#| "gryphons or for taking units off the map.\n"
-#| "\n"
-#| "Note: The Swarm AI is coded as a Micro AI. A Micro AI can be added and "
-#| "adapted to the need of a scenario easily using only WML and the "
-#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
-#| "span> at http://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario features bats moving around in a swarm. Without adjacent "
 "enemies, they simply try to stay together and at a certain distance from "
@@ -3120,11 +3034,11 @@ msgid ""
 msgstr ""
 "Questo scenario implementa un differente comportamento dei lupi, rispetto "
 "alla IA «Animali». Innanzi tutto, ci possono essere un numero arbitrario "
-"qualsiasi di branchi di lupi e la grandezza del branco per ogni schieramento "
-"è un parametro libero (impostato in questo scenario a 3 per lo schieramento "
-"2 e a 4 per lo schieramento 3). All’inizio dello scenario, i lupi vicini "
-"l’un con l’altro vengono raggruppati in branchi im maniera semi-metodica. I "
-"lupi dello stesso branco iniziano a raggrupparsi sulla mappa. Dopo di che, "
+"qualsiasi di branchi di lupi e la grandezza del branco per ogni squadra è un "
+"parametro libero (impostato in questo scenario a 3 per lo schieramento 2 e a "
+"4 per lo schieramento 3). All’inizio dello scenario, i lupi vicini l’un con "
+"l’altro vengono raggruppati in branchi im maniera semi-metodica. I lupi "
+"dello stesso branco iniziano a raggrupparsi sulla mappa. Dopo di che, "
 "rimangono raggruppati fintanto che un solo lupo rimane, e tenterà di unirsi "
 "ad un branco incompleto o con un altro lupo solitario. Anche i lupi solitari "
 "che entreranno nello scenario nel corso del suo svolgimento si comporteranno "
@@ -3162,16 +3076,16 @@ msgid ""
 "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
 "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgstr ""
-"É possibile includere una fazione 1 con controllo umano, in modo che "
+"É possibile includere una Squadra 1 con controllo umano, in modo che "
 "l’azione si fermi ad ogni turno per dare un’occhiata in giro (o per fare "
 "altre cose in modalità debug). In modalità con controllo umano, sono "
 "disponibili diverse opzioni tramite il bottone destro del mouse, tipo la "
 "possibilità di aggiungere lupi addizionali ad una qualsiasi fazione, "
-"rimuovere lupi dalla mappa, aggiungere contadini alla fazione controllata "
+"rimuovere lupi dalla mappa, aggiungere contadini alla squadra controllata "
 "dagli umani o terminare lo scenario. In questo modo si può facilmente "
 "analizzare il comportamento della IA «Lupi» sotto diverse circostanze.\n"
 "\n"
-"Da notare che il leader della fazione controllata dagli umani, Rutburt, si "
+"Da notare che il leader della squadra controllata dagli umani, Rutburt, si "
 "può muovere per 99 esagoni ad ogni turno, in modo che sia sempre possibile "
 "tenerlo fuori da situazioni pericolose.\n"
 "\n"
@@ -3184,7 +3098,7 @@ msgstr ""
 #. [option]
 #: data/ai/micro_ais/scenarios/wolves.cfg:214
 msgid "<span font='16'>I'll just watch the two wolf sides.</span>"
-msgstr "<span font='16'>Mi limiterò ad osserver le due fazioni di lupi.</span>"
+msgstr "<span font='16'>Mi limiterò ad osserver le due squadre di lupi.</span>"
 
 #. [objectives]
 #: data/ai/micro_ais/scenarios/wolves.cfg:238
@@ -3194,7 +3108,7 @@ msgstr "Osserva i lupi che vanno in giro e si combattono l’un l’altro"
 #. [objective]: condition=win
 #: data/ai/micro_ais/scenarios/wolves.cfg:240
 msgid "No wolves left on one side"
-msgstr "Una fazione rimane senza lupi"
+msgstr "Una squadra rimane senza lupi"
 
 #. [message]: speaker=narrator
 #: data/ai/scenarios/ai_arena_small/0001-healing.cfg:17
