--- a/po/wesnoth-multiplayer/it.po
+++ b/po/wesnoth-multiplayer/it.po
@@ -8,14 +8,14 @@
 # Automatically generated, 2004.
 # Alessio D'Ascanio <otaku@fastwebnet.it>, 2004, 2005.
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2009, 2011.
-# Antonio Rosella <arosella@yahoo.com>, 2012-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2012-2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-09-16 07:03 UTC\n"
-"PO-Revision-Date: 2018-09-09 17:52+0200\n"
+"PO-Revision-Date: 2019-01-27 11:51+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #. [generic_multiplayer]: id=user_map
@@ -135,7 +135,7 @@ msgstr "Totale: <b>%d</b>"
 #. [lua]: f
 #: data/multiplayer/eras.lua:93
 msgid "Sides %s and %d are tied."
-msgstr ""
+msgstr "Le squadre %s e %d sono accoppiate."
 
 #. [lua]: f
 #: data/multiplayer/eras.lua:95
@@ -1818,10 +1818,8 @@ msgstr "2g - La fortezza dai mille pungiglioni"
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:39
-#, fuzzy
-#| msgid "A strange place. Designed by Doc Paterson"
 msgid "A strange place. Designed by Doc Paterson."
-msgstr "Uno strano posto. Progettato da Doc Paterson"
+msgstr "Uno strano posto. Progettato da Doc Paterson."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:93
@@ -2151,12 +2149,6 @@ msgstr "4g – L’incrocio di Isar"
 
 #. [multiplayer]: id=multiplayer_Isars_Cross
 #: data/multiplayer/scenarios/4p_Isars_Cross.cfg:9
-#, fuzzy
-#| msgid ""
-#| "A very small 2 vs. 2 map. Close quarters fighting means the successful "
-#| "rotation of units and planning of moves is important. Teams set for "
-#| "players 1+4 vs. 2+3 (northeast vs. southwest). Designed for 75 starting "
-#| "gold, 20 villages."
 msgid ""
 "A very small 2 vs. 2 map. Close quarters fighting means the successful "
 "rotation of units and planning of moves is important. Teams set for players "
@@ -2165,8 +2157,8 @@ msgid ""
 msgstr ""
 "Una mappa molto piccola 2 contro 2. Per la vicinanza delle basi è importante "
 "riuscire a ruotare le unità e pianificare le mosse. Le squadre sono definite "
-"con i giocatori 1 e 4 contro 2 e 3 (nordest contro sudovest). Bilanciata per "
-"75 monete iniziali, 20 villaggi."
+"con i giocatori 1 &amp; 4 contro 2 &amp; 3 (nordest contro sudovest). "
+"Bilanciata per 75 monete iniziali, 20 villaggi."
 
 #. [side]
 #: data/multiplayer/scenarios/4p_Isars_Cross.cfg:20
@@ -2249,17 +2241,13 @@ msgstr "4g – Il fiume Loris"
 
 #. [multiplayer]: id=multiplayer_Loris_River
 #: data/multiplayer/scenarios/4p_Loris_River.cfg:9
-#, fuzzy
-#| msgid ""
-#| "2 vs. 2 map centered around a river with keeps in opposite corners. "
-#| "Designed for players 1+4 vs. 2+3. There are 28 villages."
 msgid ""
 "2 vs. 2 map centered around a river with keeps in opposite corners. Designed "
 "for players 1 &amp; 4 vs. 2 &amp; 3. There are 28 villages."
 msgstr ""
 "Una mappa due contro due incentrata su di un fiume con due fortezze agli "
-"angoli opposti. Si consiglia di impostare i giocatori 1 e 4 contro 2 e 3. "
-"Contiene 28 villaggi."
+"angoli opposti. Si consiglia di impostare i giocatori 1 &amp; 4 contro 2 "
+"&amp; 3. Contiene 28 villaggi."
 
 #. [multiplayer]: id=multiplayer_4p_Morituri
 #: data/multiplayer/scenarios/4p_Morituri.cfg:5
@@ -2284,18 +2272,14 @@ msgstr ""
 
 #. [multiplayer]: id=multiplayer_Paths_of_Daggers
 #: data/multiplayer/scenarios/4p_Paths_of_Daggers.cfg:9
-#, fuzzy
-#| msgid ""
-#| "A 2 vs. 2 map with 5 separate paths of engagement. Balanced to be played "
-#| "east vs. west (1+4 vs. 2+3), but works well with any teams or FFA."
 msgid ""
 "A 2 vs. 2 map with 5 separate paths of engagement. Balanced to be played "
 "east vs. west (1 &amp; 4 vs. 2 &amp; 3), but works well with any teams or "
 "FFA."
 msgstr ""
 "Una mappa due contro due con cinque diversi percorsi dove ingaggiare il "
-"nemico. È stata bilanciata per esser giocata da est contro ovest (1 e 4 "
-"contro 2 e 3), ma funziona bene con qualsiasi squadra o anche nel tutti "
+"nemico. È stata bilanciata per esser giocata da est contro ovest (1 &amp; 4 "
+"contro 2 &amp; 3), ma funziona bene con qualsiasi squadra o anche nel tutti "
 "contro tutti."
 
 #. [multiplayer]: id=multiplayer_Ruins_of_Terra-Dwelve
