--- a/po/wesnoth-trow/it.po
+++ b/po/wesnoth-trow/it.po
@@ -1,21 +1,21 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007.
 # Michele Maresi (mich) <maresi.michele@gmail.com> 2009-2012
-# Antonio 'Antro' Rosella <arosella@yahoo.com> 2013-2016
+# Antonio 'Antro' Rosella <arosella@yahoo.com> 2013-2019
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2016-05-13 14:28+0000\n"
+"PO-Revision-Date: 2019-01-23 20:56+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
@@ -75,10 +75,8 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
-#, fuzzy
-#| msgid "(Expert level, 24 scenarios.)"
 msgid "(Hard level, 24 scenarios.)"
-msgstr "(Livello per esperti, 24 scenari)"
+msgstr "(Livello per esperti, 24 scenari.)"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -1488,7 +1486,7 @@ msgstr "SE - La Vecchia Foresta. Entra a tuo rischio!"
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg:240
 msgid "SW — Southbay."
-msgstr "SO - Southbay"
+msgstr "SO - Southbay."
 
 #. [event]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg:264
@@ -1498,7 +1496,7 @@ msgstr "Grilg"
 #. [message]: speaker=Grilg
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg:274
 msgid "What? More humans here? Get them!"
-msgstr "Cosa? Altri uomini qui? Prendeteli"
+msgstr "Cosa? Altri uomini qui? Prendeteli!"
 
 #. [event]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/04b_The_Midlands.cfg:296
@@ -1733,8 +1731,6 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:239
-#, fuzzy
-#| msgid "We will help. "
 msgid "We will help."
 msgstr "Vi aiuteremo."
 
@@ -1782,7 +1778,7 @@ msgstr ""
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:293
 msgid "Stupid tree-folk."
-msgstr "Stupido popolo degli alberi"
+msgstr "Stupido popolo degli alberi."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:306
@@ -1810,7 +1806,7 @@ msgid ""
 "orcs have come, and they are taking this Isle!"
 msgstr ""
 "Be’, non credo che dovrai preoccuparti della mia razza negli anni futuri. "
-"Gli orchi sono arrivati e stanno occupando quest’isola."
+"Gli orchi sono arrivati e stanno occupando quest’isola!"
 
 #. [message]: speaker=Elilmaldur-Rithrandil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:328
@@ -2512,7 +2508,7 @@ msgstr "Morte del comandante Aethyr"
 #. [objective]: condition=lose
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:274
 msgid "Miss the Last Ship"
-msgstr "Perdi l’ultima nave!"
+msgstr "Perdi l’ultima nave"
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:291
@@ -2821,7 +2817,7 @@ msgid ""
 "know that lich you have petrified just outside of Southbay—"
 msgstr ""
 "Hai il Rubino di Fuoco, ma non sai minimamente cosa faccia, giusto? Tu "
-"conosci quel lich che avete pietrificato appena fuori Southbay-"
+"conosci quel lich che avete pietrificato appena fuori Southbay—"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:952
@@ -2920,7 +2916,7 @@ msgstr "Signore lich Caror"
 #. [side]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:137
 msgid "Yetis"
-msgstr ""
+msgstr "Yeti"
 
 #. [objective]: condition=win
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:193
@@ -3242,7 +3238,7 @@ msgstr ""
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/10_Sewer_of_Southbay.cfg:164
 msgid "This is the far end of that river bed. Legend has it—"
-msgstr "Questa è l’estremità del letto di questo fiume. La leggenda dice -"
+msgstr "Questa è l’estremità del letto di questo fiume. La leggenda dice—"
 
 #. [message]: speaker=Tinry the Red
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/10_Sewer_of_Southbay.cfg:168
@@ -3260,7 +3256,7 @@ msgid ""
 "time searching, it has come to us!"
 msgstr ""
 "Lo puoi sentire, fratello? Costui porta il Rubino di Fuoco. Dopo tutte le "
-"nostre ricerche, è giunto a noi."
+"nostre ricerche, è giunto a noi!"
 
 #. [message]: speaker=Tinry the Red
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/10_Sewer_of_Southbay.cfg:176
@@ -3418,12 +3414,12 @@ msgid ""
 "Put her out with the others!"
 msgstr ""
 "Hmph! Mi importa poco ora. Cosa è questa? Hai portato una trovatella wesfolk "
-"con te. Mettila fuori con gli altri."
+"con te. Mettila fuori con gli altri!"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:128
 msgid "You’ve put my people out in the snow? Prepare to meet your fate you—"
-msgstr "Hai spinto il mio popolo fra le nevi!? Preparati a morire, tu-"
+msgstr "Hai spinto il mio popolo fra le nevi!? Preparati a morire, tu—"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:132
@@ -3495,7 +3491,7 @@ msgstr "Compagn- Cosa?"
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:165
 msgid "She’s just full of surprises."
-msgstr "È davvero piena di sorprese!"
+msgstr "È davvero piena di sorprese."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:169
@@ -3532,7 +3528,7 @@ msgstr ""
 "viene dall’Ovest, che è brulicante di ogni forma mostruosa possibile. Non "
 "c’è più posto in quel luogo per noi. Se credi che noi siamo malvagi, "
 "dovresti vedere le altre creature che vivono lì. Verreste fatti schiavi o "
-"uccisi!"
+"uccisi."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/11_Southbay_in_Winter.cfg:181
@@ -3781,7 +3777,7 @@ msgstr "È proprio così. Ma dov’è il principe?"
 msgid "The Crown Prince is dead. But we have need of your services again—"
 msgstr ""
 "Il principe della corona è morto. Ma abbiamo di nuovo bisogno dei tuoi "
-"servigi..."
+"servigi—"
 
 #. [message]: speaker=Lord Typhon
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg:420
@@ -4395,7 +4391,7 @@ msgstr "Il 20% dell’oro finale verrà riportato nel prossimo scenario."
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:276
 msgid "Enemies will not initiate an attack if there is a risk of them dying."
 msgstr ""
-"I nemici non attaccheranno se per loro c’é il concreto rischio di morire. "
+"I nemici non attaccheranno se per loro c’é il concreto rischio di morire."
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:286
@@ -4434,7 +4430,7 @@ msgstr ""
 #. [message]: speaker=Glimir
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:299
 msgid "By the right of treaty, ancient but still true—"
-msgstr "Rispettiamo le assegnazioni della tregua, vecchia ma sempre valida-"
+msgstr "Rispettiamo le assegnazioni della tregua, vecchia ma sempre valida—"
 
 #. [message]: speaker=Dursil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:304
@@ -4466,7 +4462,7 @@ msgstr ""
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:376
 msgid "We come in peace. May our peoples—"
-msgstr "Veniamo in pace. Possano le nostre genti-"
+msgstr "Veniamo in pace. Possano le nostre genti—"
 
 #. [message]: speaker=Dursil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:380
@@ -4558,7 +4554,7 @@ msgstr ""
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:459
 msgid "I am Prince Haldric. We come in peace. May our peoples—"
-msgstr "Sono il principe Haldric. Veniamo in pace. Possano le nostre genti-"
+msgstr "Sono il principe Haldric. Veniamo in pace. Possano le nostre genti—"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:463
@@ -4635,7 +4631,7 @@ msgstr ""
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:526
 msgid "May the currents carry you swiftly, my friend. "
-msgstr "Possano le correnti portarti velocemente, amico mio."
+msgstr "Possano le correnti portarti velocemente, amico mio. "
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:530
@@ -4977,7 +4973,7 @@ msgstr "Uomo del nord ovest, hai meritato un posto in questo continente."
 #. [message]: speaker=Lord Aryad
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg:505
 msgid "As per our agreement, you and your people—"
-msgstr "E come eravamo d’accordo, tu e la tua gente-"
+msgstr "E come eravamo d’accordo, tu e la tua gente—"
 
 #. [message]: speaker=Lord El'Isomithir
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_The_Kalian.cfg:510
@@ -5137,7 +5133,7 @@ msgid ""
 "a miracle any of us are alive at all."
 msgstr ""
 "Sono felice che sia finita. Gli elfi certamente non lo crederanno. È un "
-"miracolo che ognuno di noi sia sopravvissuto!"
+"miracolo che ognuno di noi sia sopravvissuto."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg:292
@@ -5194,7 +5190,7 @@ msgstr "No!"
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg:505
 msgid "We’ve slain the dragon: "
-msgstr "Abbiamo ucciso il drago:"
+msgstr "Abbiamo ucciso il drago: "
 
 #. [option]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17a_The_Dragon.cfg:509
@@ -5275,7 +5271,7 @@ msgstr "Siamo stati troppo lenti... Tutti i naga del mare ci saranno addosso!"
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:188
 msgid "Ick! When you kill them they divide."
-msgstr "Ehi! Quando le uccidi, si dividono!"
+msgstr "Ehi! Quando le uccidi, si dividono."
 
 #. [event]
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17b_Lizard_Beach.cfg:232
@@ -5450,7 +5446,7 @@ msgstr "Il tempio è vuoto."
 #. [objective]: condition=win
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg:300
 msgid "Defeat the Vampire Queen"
-msgstr "Sconfiggi la regina vampira!"
+msgstr "Sconfiggi la regina vampira"
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg:330
@@ -5483,7 +5479,7 @@ msgid ""
 "they are elf-dead. Be careful indeed."
 msgstr ""
 "Questi saranno morti da tempo. Non come i non morti a cui il mio popolo era "
-"abituato e son degli elfi-morti. Fate molta attenzione!"
+"abituato e son degli elfi-morti. Fate molta attenzione."
 
 #. [message]: speaker=Minister Edren
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17d_Cursed_Isle.cfg:352
@@ -5964,7 +5960,7 @@ msgid ""
 msgstr ""
 "Questo lo vedremo! Il principe pazzo di Southbay ha sbagliato a iniziare "
 "questa guerra, ma sei tu il vero mostro! Hai sacrificato la tua gente per "
-"preservare la tua non-vita immortale!"
+"preservare la tua non-vita immortale."
 
 #. [message]: speaker=Lich-Lord Jevyan
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/20_Return_of_the_Fleet.cfg:284
@@ -6017,7 +6013,7 @@ msgid ""
 "quickly—"
 msgstr ""
 "Abbiamo sconfitto le armate di Jevyan. La nave deve far scendere al più "
-"presto i suoi passeggeri-"
+"presto i suoi passeggeri—"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/20_Return_of_the_Fleet.cfg:413
@@ -6122,7 +6118,7 @@ msgstr ""
 "Certo, e potremmo aiutarli. Dovremo valutare le nostre possibilità quando e "
 "se arriverà il momento. Se gli orchi dovessero tornare in gran numero, la "
 "furia del loro attacco deve essere assorbita da qualcun altro, altrimenti "
-"non sopravviveremmo. Chissà, magari non sarà necessario nemmeno aiutarli -"
+"non sopravviveremmo. Chissà, magari non sarà necessario nemmeno aiutarli —"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/21_The_Plan.cfg:128
@@ -6202,7 +6198,7 @@ msgstr ""
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/21_The_Plan.cfg:157
 msgid "Haldric, this is ridiculous! I—"
-msgstr "Haldric, questo è ridicolo! Io -"
+msgstr "Haldric, questo è ridicolo! Io —"
 
 #. [message]: speaker=Commander Aethyr
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/21_The_Plan.cfg:190
@@ -6644,7 +6640,7 @@ msgstr "Che cosa abbiamo fatto?"
 #. [message]: speaker=Commander Aethyr
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:839
 msgid "My love, my family, I’ll be there soo—"
-msgstr "Amore mio, famiglia mia, sarò presto da vo-"
+msgstr "Amore mio, famiglia mia, sarò presto da vo—"
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:844
@@ -6661,8 +6657,8 @@ msgid ""
 "Jevyan— I spit upon thee. Your end awaits. My love, my family, I’ll be there "
 "soo—"
 msgstr ""
-"Jevyan - io sputo su di te. La tua fine ti attende. Amore mio, famiglia mia, "
-"sarò presto da vo-"
+"Jevyan— io sputo su di te. La tua fine ti attende. Amore mio, famiglia mia, "
+"sarò presto da vo—"
 
 #. [message]: speaker=Lich-Lord Jevyan
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:883
@@ -6765,7 +6761,7 @@ msgstr "Risorgete, risorgete dalla terra!"
 #. [message]: speaker=Lich-Lord Jevyan
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:1445
 msgid "Come in from the deep my loyal soldiers!"
-msgstr "Venite dalle profondità miei soldati fidati"
+msgstr "Venite dalle profondità miei soldati fidati!"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:1629
@@ -7330,7 +7326,7 @@ msgstr "Non è ancora la mia ora! No!"
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/utils/trow-deaths.cfg:42
 msgid "No! I’ll not go so easil—"
-msgstr "No! Non morirò così facilm-"
+msgstr "No! Non morirò così facilm—"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/utils/trow-deaths.cfg:56
