--- a/po/wesnoth-l/it.po
+++ b/po/wesnoth-l/it.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2017-05-19 18:35+0300\n"
+"PO-Revision-Date: 2019-01-28 21:21+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: it\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:10 data/campaigns/Liberty/_main.cfg:11
@@ -70,10 +70,8 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
-#, fuzzy
-#| msgid "(Intermediate level, 8 scenarios.)"
 msgid "(Novice level, 8 scenarios.)"
-msgstr "(Livello intermedio, 9 scenari)"
+msgstr "(Livello per principianti, 8 scenari.)"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -560,12 +558,6 @@ msgstr "Garard è il Re di Wesnoth. Non siamo governati da nessuna regina."
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:146
-#, fuzzy
-#| msgid ""
-#| "Insolent peasants, you will kneel before your betters! Asheviere is the "
-#| "queen of Wesnoth. The King fell three weeks ago at Abez. I shall not "
-#| "bandy words with you. Your magistrate will be coming with us, and we do "
-#| "not care if it is dead or alive."
 msgid ""
 "Insolent peasants, you will kneel before your betters! Asheviere is the "
 "Queen of Wesnoth. The King fell three weeks ago at Abez. I shall not bandy "
@@ -573,7 +565,7 @@ msgid ""
 "if it is dead or alive."
 msgstr ""
 "Contadini insolenti, vi inginocchierete innanzi ai vostri superiori! "
-"Asheviere è la regina di Wesnoth. Il Re è caduto tre settimane fa ad Abez. "
+"Asheviere è la Regina di Wesnoth. Il Re è caduto tre settimane fa ad Abez. "
 "Sono stanco di discutere con voi. Il vostro magistrato verrà con noi e non "
 "ci importa se lo farà da vivo o da morto."
 
@@ -659,10 +651,6 @@ msgstr "Oh no! Non abbiamo più tempo, sono arrivati i loro rinforzi..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:353
-#, fuzzy
-#| msgid ""
-#| "They would be remembered only traitors rightly put down by the Queen’s "
-#| "lances. And in the dark years to come, woe betide any who questioned it."
 msgid ""
 "They would be remembered only as traitors rightly put down by the Queen’s "
 "lances. And in the dark years to come, woe betide any who questioned it."
@@ -743,17 +731,12 @@ msgstr ""
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:184
-#, fuzzy
-#| msgid ""
-#| "It has been a long time, old friend. Your news worries us. Yet, there is "
-#| "no problem we have not worked out here at our secret meeting place."
 msgid ""
 "It has been a long time, old friend. Your news worries us. Yet, there is no "
 "problem we have not worked out together."
 msgstr ""
 "Quanto tempo, vecchio mio. Le notizie che porti ci preoccupano. Finora non "
-"c’è ancora stato un problema che non abbiamo risolto al nostro punto di "
-"incontro segreto."
+"c’è mai stato alcun problema che insieme non siamo stati capaci di risolvere."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
@@ -827,10 +810,6 @@ msgstr ""
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:220
-#, fuzzy
-#| msgid ""
-#| "I think they are, old friend. And that rank smell on the wind tells "
-#| "another tale; saurians approach. To arms!"
 msgid ""
 "I think they are, old friend. And that rank smell on the wind tells another "
 "tale: saurians approach. To arms!"
@@ -1207,7 +1186,7 @@ msgid ""
 "Remember that in fog, units always see one hex further than they can move."
 msgstr ""
 "Ricorda che, attraverso la nebbia, le unità riescono a vedere soltanto un "
-"esagono più lontano di quanto possano muovere. "
+"esagono più lontano di quanto possano muovere."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:308
@@ -1484,21 +1463,15 @@ msgstr ""
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:253
-#, fuzzy
-#| msgid ""
-#| "Carcyn is always foggy as of late because these woods have recently "
-#| "become home to a lich and two of its underling necromancers. Our "
-#| "experiments may have actually aroused it from sleep... We’re not exactly "
-#| "sure."
 msgid ""
 "Carcyn is always foggy as of late because these woods have recently become "
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... We’re not sure."
 msgstr ""
 "Carcyn è sempre nebbiosa negli ultimi tempi, perché questi boschi sono "
-"divenuti la sede di un potente lich e di due suoi adepti negromanti. I "
-"nostri esperimenti potrebbero in realtà averlo risvegliato... non ne siamo "
-"proprio sicuri."
+"divenuti la sede di un potente lich e di due suoi adepti negromanti. In "
+"realtà, potrebbe essere stato risvegliato dai nostri esperimenti... non ne "
+"siamo proprio sicuri."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:257
@@ -1993,13 +1966,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:35
-#, fuzzy
-#| msgid ""
-#| "This sentinel of the western plains stood watch as Wesnoth prospered for "
-#| "many centuries under the protection it provided. No war has overcome it, "
-#| "and its walls have never been overrun. The blood of invaders stains its "
-#| "parapets and the bones of the defeated crumble at the base of Halstead’s "
-#| "frozen waves of stone."
 msgid ""
 "This sentinel of the western plains stood watch as Wesnoth prospered for "
 "many centuries under its protection. No war has overcome it, and its walls "
@@ -2132,17 +2098,12 @@ msgstr "Come fai a saperlo?"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:402
-#, fuzzy
-#| msgid ""
-#| "When I was a boy, my father — your grandfather — brought your dad and me "
-#| "to live in Aldril after orcs massacred many in our village. We grew up "
-#| "around here, and we learned many things."
 msgid ""
 "When I was a boy, my father — your grandfather — brought your mother and me "
 "to live in Aldril after orcs massacred many in our village. We grew up "
 "around here, and we learned many things."
 msgstr ""
-"Quando ero ragazzo, mio padre – tuo nonno – portò tuo padre e me a vivere a "
+"Quando ero ragazzo, mio padre – tuo nonno – portò tua madre e me a vivere a "
 "Aldril dopo che gli orchi fecero una carneficina al nostro villaggio. "
 "Crescemmo in questi luoghi e imparammo molte cose."
 
@@ -2458,12 +2419,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:20
-#, fuzzy
-#| msgid ""
-#| "The Elense riders routed the orcish army, small as it was, and sent them "
-#| "back across the Great River. They then scattered to the countryside and "
-#| "were not heard from again. Baldras thought this odd behavior when he "
-#| "heard about it."
 msgid ""
 "The Elense riders routed the orcish army, small as it was, and sent them "
 "back across the Great River. They then scattered to the countryside and were "
@@ -2608,14 +2563,6 @@ msgstr "Mago errante"
 
 #. [unit_type]: id=Rogue Mage, race=human
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:17
-#, fuzzy
-#| msgid ""
-#| "Some mages are thrown out of the mage’s guild for attempting to practice "
-#| "forbidden arts. Now completely outside the law, these rogue mages do "
-#| "whatever necessary to support their study of black magic. Although not as "
-#| "skilled as mages with more formal training, their magic can be quite "
-#| "lethal, while their banditry has resulted in moderate skill with the "
-#| "short sword."
 msgid ""
 "Some mages are thrown out of the mages’ guild for attempting to practice "
 "forbidden arts. Now completely outside the law, these rogue mages do "
@@ -2623,7 +2570,7 @@ msgid ""
 "skilled as mages with more formal training, their magic can be quite lethal, "
 "while their banditry has resulted in moderate skill with the short sword."
 msgstr ""
-"Alcuni maghi sono scacciati dalla gilda per aver tentato di apprendere le "
+"Alcuni maghi vengono scacciati dalla gilda per aver tentato di apprendere le "
 "arti proibite. Ormai completamente fuorilegge, questi maghi erranti fanno "
 "tutto ciò che serve per continuare lo studio della magia nera. Sebbene non "
 "tanto preparati quanto i maghi formalmente addestrati, la loro magia può "
