--- a/po/wesnoth-lib/it.po
+++ b/po/wesnoth-lib/it.po
@@ -5,13 +5,13 @@
 #
 # Automatically generated, 2004.
 # Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008, 2009, 2010.
-# Antonio Rosella <arosella@yahoo.com>, 2012-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2012-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:30+0300\n"
-"PO-Revision-Date: 2018-09-09 17:05+0200\n"
+"PO-Revision-Date: 2019-01-23 20:50+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [terrain_type]: id=farmer-fence  # AI-animal-proof fences from first scenario
 #. [terrain_type]: id=fence
@@ -251,19 +251,15 @@ msgstr "Sabbia desertica"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:298
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deserts'</italic> have a somewhat different composition "
-#| "than small sand pits or beaches, however for gameplay purposes they are "
-#| "identical. See <ref>dst='terrain_sand' text='sand'</ref>."
 msgid ""
 "<italic>text='Deserts'</italic> have a somewhat different composition than "
 "small sand pits or beaches, however for gameplay purposes they are "
 "identical. See <ref>dst='..terrain_sand' text='sand'</ref>."
 msgstr ""
 "I <italic>text='Deserti'</italic> hanno una composizione in qualche modo "
-"diversa dalle pozze di sabbia o dalle spiagge, ma dal punto di vista del "
-"gioco sono equiparati. Vedi <ref>dst='terrain_sand' text='sabbia'</ref>."
+"diversa dalle piccole pozze di sabbia o dalle spiagge, ma dal punto di vista "
+"del gioco sono equiparati. Vedi <ref>dst='..terrain_sand' text='sabbia'</"
+"ref>."
 
 #. [terrain_type]: id=sand_beach
 #. [terrain_type]: id=sand
@@ -1649,15 +1645,6 @@ msgstr "Sabbia"
 
 #. [terrain_type]: id=reef
 #: data/core/terrain.cfg:2762
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
-#| "and sand.\n"
-#| "This provides most land units with a more steady footing and defensive "
-#| "positions than wading in shallow water normally would and also grants "
-#| "most water-dwelling races an exceptionally high defense.\n"
-#| "\n"
-#| "Mermen and Naga both receive 70% defense on coastal reefs."
 msgid ""
 "<italic>text='Coastal reefs'</italic> are shallows formed by stone, coral "
 "and sand.\n"
@@ -1703,17 +1690,6 @@ msgstr ""
 
 #. [terrain_type]: id=swamp_water
 #: data/core/terrain.cfg:2791
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
-#| "Swamps slow down nearly everyone, and inhibit their ability to defend "
-#| "themselves. An exception to this is any race bodily skilled in navigating "
-#| "water; these receive both full movement and a defensive bonus. Those that "
-#| "make their living in the wetlands are also adept at using this terrain "
-#| "for cover.\n"
-#| "\n"
-#| "Most units make do with 30% defense in swamps. Mermen, naga, and saurians "
-#| "all generally enjoy 60%."
 msgid ""
 "<italic>text='Swamps'</italic> represent any sort of wetlands.\n"
 "Swamps slow down nearly everyone, and inhibit their ability to defend "
@@ -1729,9 +1705,9 @@ msgstr ""
 "umido.\n"
 "Le paludi rallentano quasi tutte le unità, e inibiscono le loro abilità "
 "difensive. Fanno eccezione tutte quelle razze che per loro natura si trovano "
-"a loro agio in acqua. Queste razze ottengono un bonus sia in termini di "
-"movimento che difensivo. Quelli che fanno delle zone umide il loro habitat "
-"naturale possono utilizzare questo tipo di terreno come copertura "
+"a loro agio in acqua. Queste razze non hanno limitazioni di movimento ed "
+"beneficiano di un bonus difensivo. Quelli che fanno delle zone umide il loro "
+"habitat naturale possono utilizzare questo tipo di terreno come copertura "
 "difensiva.\n"
 "\n"
 "La maggior parte delle unità ottengono un fattore difensivo del 30% nelle "
@@ -1739,18 +1715,6 @@ msgstr ""
 
 #. [terrain_type]: id=shallow_water
 #: data/core/terrain.cfg:2804
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Shallow water'</italic> represents any body of water deep "
-#| "enough to come up to roughly a man’s waist. This is enough to slow down "
-#| "nearly anyone and leave them wide open to attack. Dwarves, given that the "
-#| "water reaches up almost to their heads, have an extremely hard time of "
-#| "this. The exception is any race whose bodies naturally lend themselves to "
-#| "swimming, for which they receive a considerable defensive bonus and full "
-#| "movement.\n"
-#| "\n"
-#| "Most units make do with 20 to 30% defense in shallow water, whereas both "
-#| "naga and mermen enjoy 60%."
 msgid ""
 "<italic>text='Shallow water'</italic> represents any body of water deep "
 "enough to come up to roughly a man’s waist. This is enough to slow down "
@@ -1826,15 +1790,6 @@ msgstr ""
 
 #. [terrain_type]: id=deep_water
 #: data/core/terrain.cfg:2845
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deep water'</italic> represents any body of water deep "
-#| "enough to cover a man’s head.\n"
-#| "Most units cannot enter deep water: it is the domain of units which can "
-#| "either fly, or are exceptionally strong swimmers.\n"
-#| "\n"
-#| "Mermen and naga both receive 50% defense in deep water, with full "
-#| "movement."
 msgid ""
 "<italic>text='Deep water'</italic> represents any body of water deep enough "
 "to cover a man’s head.\n"
@@ -2569,8 +2524,6 @@ msgstr "Difficoltà"
 
 #. [scroll_label]: id=message
 #: data/gui/window/campaign_difficulty.cfg:73
-#, fuzzy
-#| msgid "Select difficulty level:"
 msgid "Select difficulty:"
 msgstr "Scegli un livello di difficoltà:"
 
@@ -4490,7 +4443,7 @@ msgstr "Fai muovere e combattere le unità più velocemente"
 #. [column]
 #: data/gui/window/preferences/01_general.cfg:79
 msgid "Acceleration factor:"
-msgstr ""
+msgstr "Fattore di accelerazione:"
 
 #. [column]
 #: data/gui/window/preferences/01_general.cfg:84
@@ -4498,6 +4451,9 @@ msgid ""
 "Speed at which unit moves and animations play when ‘Accelerated speed’ is "
 "enabled or when Shift is held down in-game"
 msgstr ""
+"Velocità alla quale una unità si muove e le animazioni vengono mostrate "
+"quando viene abilitata la ‘Velocità accelerata’ o quando viene tenuto "
+"premuto il tasto Maiusc durante il gioco"
 
 #. [toggle_button]: id=disable_auto_moves
 #: data/gui/window/preferences/01_general.cfg:100
@@ -4610,7 +4566,7 @@ msgstr "Filtro:"
 #. [text_box]: id=filter
 #: data/gui/window/preferences/02_hotkeys.cfg:67
 msgid "Filters on hotkey description."
-msgstr ""
+msgstr "Filtra sulla descrizione dei tasti-scorciatoia"
 
 #. [toggle_button]: id=sort_0
 #: data/gui/window/preferences/02_hotkeys.cfg:111
@@ -5362,10 +5318,8 @@ msgstr "Richiama l’unità"
 
 #. [button]: id=rename
 #: data/gui/window/unit_recall.cfg:393
-#, fuzzy
-#| msgid "Rename Unit"
 msgid "Rename"
-msgstr "Rinomina l’unità"
+msgstr "Rinomina"
 
 #. [button]: id=dismiss
 #: data/gui/window/unit_recall.cfg:405
@@ -5469,10 +5423,8 @@ msgid "The maximum text width is less than 1."
 msgstr "L’ampiezza massima del testo è meno di 1."
 
 #: src/font/text.cpp:761
-#, fuzzy
-#| msgid "The text contains invalid markup: "
 msgid "The text contains invalid Pango markup: "
-msgstr "Il testo contiene markup non valido: "
+msgstr "Il testo contiene markup Pango non valido: "
 
 #. TRANSLATORS: Formats a two-element conjunctive list.
 #: src/formula/string_utils.cpp:251
@@ -5666,16 +5618,12 @@ msgid "addons_order^Type ($order)"
 msgstr "Tipo ($order)"
 
 #: src/gui/dialogs/addon/manager.cpp:225
-#, fuzzy
-#| msgid "addons_order^Last updated ($order)"
 msgid "addons_order^Last updated ($datelike_order)"
-msgstr "Ultimo aggiornamento ($order)"
+msgstr "Ultimo aggiornamento ($datelike_order)"
 
 #: src/gui/dialogs/addon/manager.cpp:228
-#, fuzzy
-#| msgid "addons_order^First uploaded ($order)"
 msgid "addons_order^First uploaded ($datelike_order)"
-msgstr "Prima pubblicazione ($order)"
+msgstr "Prima pubblicazione ($datelike_order)"
 
 #: src/gui/dialogs/addon/manager.cpp:257 src/gui/widgets/addon_list.cpp:103
 msgid "addon_state^Not installed"
@@ -5738,26 +5686,22 @@ msgid "addon_state^Unknown"
 msgstr "Sconosciuta"
 
 #: src/gui/dialogs/addon/manager.cpp:359
-#, fuzzy
-#| msgid "sort^Ascending"
 msgid "ascending"
-msgstr "Ascendente"
+msgstr "ascendente"
 
 #. TRANSLATORS: Sorting order of dates, oldest first
 #: src/gui/dialogs/addon/manager.cpp:361
 msgid "oldest to newest"
-msgstr ""
+msgstr "dalla più vecchia alla più recente"
 
 #: src/gui/dialogs/addon/manager.cpp:364
-#, fuzzy
-#| msgid "sort^Descending"
 msgid "descending"
-msgstr "Discendente"
+msgstr "discendente"
 
 #. TRANSLATORS: Sorting order of dates, newest first
 #: src/gui/dialogs/addon/manager.cpp:366
 msgid "newest to oldest"
-msgstr ""
+msgstr "dalla più recente alla più vecchia"
 
 #: src/gui/dialogs/addon/manager.cpp:384 src/gui/dialogs/chat_log.cpp:416
 #: src/gui/dialogs/game_cache_options.cpp:105
@@ -6005,10 +5949,8 @@ msgid "The game data cache could not be purged."
 msgstr "La cache del gioco non può essere ripulita."
 
 #: src/gui/dialogs/game_load.cpp:264
-#, fuzzy
-#| msgid "The selected game has no sides!"
 msgid "The selected file is corrupt: "
-msgstr "La partita scelta non ha squadre!"
+msgstr "Il file selezionato è corrotto: "
 
 #: src/gui/dialogs/game_load.cpp:343
 msgid "(Invalid)"
@@ -6043,10 +5985,8 @@ msgid "Version: "
 msgstr "Versione: "
 
 #: src/gui/dialogs/game_load.cpp:421
-#, fuzzy
-#| msgid "Modifications:"
 msgid "Modifications: "
-msgstr "Modifiche:"
+msgstr "Modifiche: "
 
 #: src/gui/dialogs/game_stats.cpp:74
 msgid "controller^AI"
@@ -6182,12 +6122,12 @@ msgstr "Dati lobby in scaricamento"
 #: src/gui/dialogs/lua_interpreter.cpp:690
 msgid "The lua console can only be used in debug mode! (Run ':debug' first)"
 msgstr ""
+"La console lua può essere utilizzata soltanto in modalità debug! (Esegui "
+"prima ':debug')"
 
 #: src/gui/dialogs/lua_interpreter.cpp:691
-#, fuzzy
-#| msgid "Lua Console"
 msgid "lua console"
-msgstr "Console Lua"
+msgstr "console lua"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:102
 msgid "Selected Game"
@@ -6274,16 +6214,12 @@ msgid "Use map settings:"
 msgstr "Usa impostazioni della mappa:"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:488
-#, fuzzy
-#| msgid ""
-#| "One or more items need to be installed\n"
-#| "in order to join this game."
 msgid ""
 "One or more add-ons need to be installed\n"
 "in order to join this game."
 msgstr ""
 "Per poter entrare in questa partita\n"
-"uno o più elementi devono essere istallati."
+"una o più estensioni devono essere istallate."
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:513
 msgid "Observers allowed"
@@ -6294,10 +6230,8 @@ msgid "Observers not allowed"
 msgstr "Osservatori non ammessi"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:791
-#, fuzzy
-#| msgid "Lobby"
 msgid "lobby"
-msgstr "Lobby"
+msgstr "lobby"
 
 #: src/gui/dialogs/multiplayer/lobby.cpp:951
 msgid ""
@@ -6414,10 +6348,8 @@ msgstr "vuoto"
 
 #: src/gui/dialogs/multiplayer/mp_join_game.cpp:248
 #: src/gui/dialogs/multiplayer/mp_staging.cpp:106
-#, fuzzy
-#| msgid "Quit game"
 msgid "this game"
-msgstr "Termina la partita"
+msgstr "questa partita"
 
 #: src/gui/dialogs/multiplayer/mp_join_game.cpp:360
 #: src/gui/dialogs/multiplayer/mp_staging.cpp:165
@@ -6493,10 +6425,8 @@ msgstr ""
 "Prova a salvare la schermata come PNG."
 
 #: src/gui/dialogs/statistics_dialog.cpp:64
-#, fuzzy
-#| msgid "Scenarios"
 msgid "All Scenarios"
-msgstr "Scenari"
+msgstr "Tutti gli scenari"
 
 #: src/gui/dialogs/statistics_dialog.cpp:177
 msgid "Recruits"
@@ -6528,7 +6458,7 @@ msgstr "Subito"
 
 #: src/gui/dialogs/statistics_dialog.cpp:251
 msgid "$count|× $name"
-msgstr ""
+msgstr "$count|× $name"
 
 #: src/gui/dialogs/title_screen.cpp:174 src/hotkey/hotkey_command.cpp:91
 msgid "Screenshot"
@@ -6601,16 +6531,12 @@ msgid "Room <i>“$name”</i> joined"
 msgstr "Sei entrato nella stanza <i>“$name”</i>"
 
 #: src/gui/widgets/chatbox.cpp:392
-#, fuzzy
-#| msgid ""
-#| "Whisper session with <i>“$name”</i> started. If you do not want to "
-#| "receive messages from this user, type <i>/ignore $name</i>\n"
 msgid ""
 "Whisper session with <i>“$name”</i> started. If you do not want to receive "
 "messages from this user, type <i>/ignore $name</i>"
 msgstr ""
 "Iniziata una sessione bisbigliata con <i>“$name”</i>. Se non vuoi ricevere "
-"messaggi da questo utente, scrivi <i>/ignore $name</i>\n"
+"messaggi da questo utente, scrivi <i>/ignore $name</i>"
 
 #: src/gui/widgets/chatbox.cpp:631
 msgid "$player has entered the room"
@@ -6861,7 +6787,7 @@ msgstr "Seleziona/Muovi/Attacca"
 
 #: src/hotkey/hotkey_command.cpp:78
 msgid "Touch"
-msgstr ""
+msgstr "Tocca"
 
 #: src/hotkey/hotkey_command.cpp:79
 msgid "Animate Map"
