--- a/po/wesnoth-nr/it.po
+++ b/po/wesnoth-nr/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-09-09 18:04+0200\n"
+"PO-Revision-Date: 2019-01-28 21:10+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -135,14 +135,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
-#, fuzzy
-#| msgid ""
-#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
-#| "strong fortifications around Dwarven Doors. The people who called it "
-#| "home, dwarven and human alike, knew that the wealth of their city might "
-#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
-#| "themselves well able to fight off any bandit gang or petty warlord that "
-#| "could arise in the thinly-settled northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2415,17 +2407,12 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:736
-#, fuzzy
-#| msgid ""
-#| "If you have no objection, Tallin, we would like to join you. These "
-#| "northlands are hardly safe these days for anyone to be traveling on their "
-#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "Northlands are hardly safe these days for anyone to be traveling on their "
 "own, and we could lend valuable help to your cause."
 msgstr ""
-"Se non hai obiezioni, Tallin vorremmo unirci a voi. Queste Terre del Nord "
+"Se non hai obiezioni, Tallin, vorremmo unirci a voi. Queste Terre del Nord "
 "non sono sicure in questi giorni per chiunque viaggi da solo e noi potremmo "
 "essere un aiuto prezioso per la tua causa."
 
@@ -3296,13 +3283,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2131
-#, fuzzy
-#| msgid ""
-#| "I am afraid times have changed much. Our first king, Haldric I, fled from "
-#| "the Green Isle with the Wesfolk and the orcs in pursuit. He came ashore "
-#| "on this land that we now call the Great Continent and destroyed the Lich-"
-#| "Lord Jevyan before founding the Kingdom of Wesnoth. That was centuries "
-#| "ago."
 msgid ""
 "I am afraid times have changed much. Our first king, Haldric I, fled the "
 "Green Isle with the Wesfolk, the orcs in pursuit. He came ashore on this "
@@ -4932,24 +4912,18 @@ msgstr "Ro’Sothian"
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:327
-#, fuzzy
-#| msgid "Save Stalrag from Ro’Sothian."
 msgid "Save Stalrag from Ro’Sothian"
-msgstr "Salva Stalrag da Ro’Sothian."
+msgstr "Salva Stalrag da Ro’Sothian"
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:336
-#, fuzzy
-#| msgid "Capture Ro’Arthian."
 msgid "Capture Ro’Arthian"
-msgstr "Cattura Ro’Arthian."
+msgstr "Cattura Ro’Arthian"
 
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:347
-#, fuzzy
-#| msgid "Death of Stalrag."
 msgid "Death of Stalrag"
-msgstr "Morte di Stalrag."
+msgstr "Morte di Stalrag"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:368
@@ -7146,12 +7120,6 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
-#, fuzzy
-#| msgid ""
-#| "Princess, we are not seeking to do business here: <i>“I do this for you "
-#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
-#| "which will forever ensure the peace and prosperity of these northlands. "
-#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
@@ -10136,12 +10104,6 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:411
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:432
-#, fuzzy
-#| msgid ""
-#| "On Father Morvin’s advice, the Council approached all the different "
-#| "orcish tribes and made treaties with them. If a chieftain refused to "
-#| "cooperate with the Alliance, he was forcibly removed from his post and "
-#| "another more favorably disposed put in his place."
 msgid ""
 "On Father Morvin’s advice, the Council approached all the different orcish "
 "tribes and made treaties with them. If a chieftain refused to cooperate with "
