--- a/po/wesnoth-sof/it.po
+++ b/po/wesnoth-sof/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-04-11 13:32+0200\n"
+"PO-Revision-Date: 2019-01-28 21:33+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:11
@@ -82,10 +82,8 @@ msgstr ""
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "(Livello per esperti, 9 scenari)"
+msgstr "(Livello per esperti, 9 scenari.)"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -591,7 +589,7 @@ msgstr ""
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:564
 msgid "That’s the last caravan! We will commence work immediately."
-msgstr "Ecco l’ultima carovana! Cominceremo immediatamente a lavorare!"
+msgstr "Ecco l’ultima carovana! Cominceremo immediatamente a lavorare."
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:579
@@ -727,7 +725,7 @@ msgid ""
 "attack...!"
 msgstr ""
 "Gli elfi sono alle nostre spalle! Dobbiamo avvisare il concilio per questo "
-"attacco!..."
+"attacco...!"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:230
@@ -783,7 +781,7 @@ msgid ""
 "here?!"
 msgstr ""
 "Aspetta! Rugnur, non ti hanno detto <i>niente</i> quando hai preso comando "
-"qui?"
+"qui?!"
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:299
@@ -1242,12 +1240,6 @@ msgstr "Mostri"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
-#, fuzzy
-#| msgid ""
-#| "The journey to the far northern wastelands was long and perilous. For the "
-#| "tunnels were winding and treacherous, and the paths were not safe from "
-#| "orcs, or worse. Nevertheless, they did reach the northlands, and began to "
-#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
@@ -1262,7 +1254,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:98
 msgid "Find Thursagan and convince him to come back to the dwarvish city"
-msgstr "Trova Thursagan e convincilo a tornare con te nella città dei nani."
+msgstr "Trova Thursagan e convincilo a tornare con te nella città dei nani"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:109
@@ -1336,10 +1328,6 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:224
-#, fuzzy
-#| msgid ""
-#| "Except for trolls and ogres, right? They live in the far northlands. "
-#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far Northlands. They’re "
 "probably lurking around here somewhere."
@@ -1363,12 +1351,12 @@ msgstr "Krawg"
 #. "Will you speak with us?"
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:351
 msgid "Kwill yooo spakkk wit uus?!"
-msgstr "Kvuoi thuuuu parrrrla kkkoon nooiii?!?"
+msgstr "Kvuoi thuuuu parrrrla kkkoon nooiii?!"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:356
 msgid "Aah! What is that?!"
-msgstr "Aah! Cos’è quello?!?"
+msgstr "Aah! Cos’è quello?!"
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:360
@@ -1413,7 +1401,7 @@ msgstr "Certo, ti aiuteremo a combattere troll e ogre."
 #. "I see a house in the distance!"
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:433
 msgid "Iii zeee hoose iiin eee d’zztaaan’eee!"
-msgstr "Ioo veeedee kvaasaa l’ntanaaa "
+msgstr "Ioo veeedee kvaasaa l’ntanaaa!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:439
@@ -1577,8 +1565,6 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:135
-#, fuzzy
-#| msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
 msgstr ""
 "Sì, ci siamo riusciti. E questo è Krawg, che ci ha aiutato nelle terre del "
@@ -1987,7 +1973,7 @@ msgstr ""
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:151
 msgid "Oh... right, right. Fine. Theganli?"
-msgstr "oh... giusto, giusto. D’accordo. Theganli?"
+msgstr "Oh... giusto, giusto. D’accordo. Theganli?"
 
 #. [message]: speaker=Kuhnar
 #: data/campaigns/Sceptre_of_Fire/scenarios/4t_The_Jeweler.cfg:155
@@ -2196,7 +2182,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:138
 msgid "Shorbear caves"
-msgstr ""
+msgstr "Caverne di Barbacorta"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:146
@@ -2205,9 +2191,6 @@ msgstr "Sconfiggi Glonoin, capo del clan Barbacorta"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
 msgstr "Tutti gli eroi nelle caverne di Barbacorta e tutti i nemici fuori"
 
@@ -2659,7 +2642,7 @@ msgstr ""
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:281
 msgid "If ye’ll permit me to say so, sir, ye’re wrong. We could—"
-msgstr "Se mi è concesso dirlo, signore, state sbagliando. Noi potremmo –"
+msgstr "Se mi è concesso dirlo, signore, state sbagliando. Noi potremmo —"
 
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:285
@@ -2675,7 +2658,7 @@ msgstr ""
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:291
 msgid "If you’ll permit me to say so, sir, you’re wrong. We could —"
-msgstr "Se mi è concesso dirlo, signore, state sbagliando. Noi potremmo –"
+msgstr "Se mi è concesso dirlo, signore, state sbagliando. Noi potremmo —"
 
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:295
@@ -2759,7 +2742,7 @@ msgid ""
 "down, or we’ll force you."
 msgstr ""
 "Se questo è ciò che pensi, non sei degno di guidarci! Dimettiti, o ti "
-"costringeremo noi!"
+"costringeremo noi."
 
 #. [message]: speaker=Durstorn
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:368
@@ -2960,7 +2943,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:87
 msgid "Reach the Wesnothian outpost in the south"
-msgstr "Raggiungi l’avamposto di Wesnoth a sud."
+msgstr "Raggiungi l’avamposto di Wesnoth a sud"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:107
@@ -3028,7 +3011,7 @@ msgstr "Raesil"
 #. [message]: speaker=second_unit
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:217
 msgid "Great, now there is no need to worry about those elves anymore!"
-msgstr ""
+msgstr "Grande, ora non dovremo più preoccuparci di questi elfi!"
 
 #. [message]: role=newcomer
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:226
@@ -3036,6 +3019,8 @@ msgid ""
 "Did you really think that you could escape us? Don’t underestimate us, "
 "inferior humans!"
 msgstr ""
+"Hai veramente pensato di porterci sfuggire? Non ci sottovalutate, umani "
+"inferiori!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:238
@@ -3043,21 +3028,23 @@ msgid ""
 "Even though my chances have grown worse, I have to fulfil my duty. I do not "
 "owe them any less!"
 msgstr ""
+"Anche se le mie possibilità sono diminuite, devo adempiere al mio dovere. "
+"Non devo venirne meno!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:263
 msgid "Oh no, more of them? And there I thought I could catch my breath…"
-msgstr ""
+msgstr "Oh no, altri ancora? Adesso che pensavo di poter tirare il fiato…"
 
 #. [message]: role=fighter
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:268
 msgid "Don’t worry sir, we’ll make it through this!"
-msgstr ""
+msgstr "Non vi preoccupate, signore: ce la faremo!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:293
 msgid "Is there no end to their numbers?"
-msgstr ""
+msgstr "Non finiranno mai?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:358
@@ -3085,6 +3072,8 @@ msgstr ""
 msgid ""
 "You slow humans took too long, our detachment has already caught up with you!"
 msgstr ""
+"Voi lenti umani ci avete messo troppo, il nostro distaccamento vi ha già "
+"raggiunti!"
 
 #. [unit]: type=Lieutenant, id=Hadlin   # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:543
@@ -3099,11 +3088,6 @@ msgstr "Chi va là?"
 #. [message]: speaker=Alanin
 #. dragoon = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:565
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission "
 "in the Northlands, and now elvish horsemen are chasing me. I barely evaded "
@@ -3116,19 +3100,14 @@ msgstr ""
 #. [message]: speaker=Alanin
 #. cavalier = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:572
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
 "mission in the Northlands, and now elvish horsemen are chasing me. I barely "
 "evaded them."
 msgstr ""
-"Sono un dragone, delle guardia del corpo personale di Haldric II. Sono stato "
-"mandato in missione a nord e ora i cavalieri degli elfi mi stanno dando la "
-"caccia. Sono riuscito a sfuggirgli per un pelo."
+"Sono un cavaliere, delle guardia del corpo personale di Haldric II. Sono "
+"stato mandato in missione a nord e ora i cavalieri degli elfi mi stanno "
+"dando la caccia. Sono riuscito a sfuggirgli per un pelo."
 
 #. [message]: speaker=Hadlin  # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:578
@@ -3222,7 +3201,7 @@ msgstr ""
 #. "Why don't we just surrender? All they want is that magic stone!"
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:277
 msgid "Wyy yoo no urrendrr? Alddey woont iz za wagic doun!"
-msgstr "Prkkee ttee no arr’dne? TTtto k l’ro dss’drno è mg’kka petra! "
+msgstr "Prkkee ttee no arr’dne? TTtto k l’ro dss’drno è mg’kka petra!"
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:281
@@ -3294,7 +3273,7 @@ msgstr ""
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:359
 msgid "What’s this? A dwarf fighting against us with the elves?!"
-msgstr "Cosa? Un nano che combatte contro di noi con gli elfi?"
+msgstr "Cosa? Un nano che combatte contro di noi con gli elfi?!"
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:364
@@ -3338,10 +3317,6 @@ msgstr "Questa bella roccia metallica è mia! Andate via!"
 
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:422
-#, fuzzy
-#| msgid ""
-#| "This forge will work perfectly. Give me a few days here, and I can "
-#| "reforge the Sceptre of Fire to fulfill its purpose."
 msgid ""
 "This forge will work perfectly. Give me a day or two here, and I can reforge "
 "the Sceptre of Fire to fulfill its purpose."
@@ -3397,17 +3372,12 @@ msgstr "Orchi"
 #. [part]
 #. The text in 1.14.4 mentioned Knalga. Geographically, these caves are in Knalga, but the text was confusing if the reader thought of the Knalgan Alliance.
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:161
-#, fuzzy
-#| msgid ""
-#| "There was no exit from the caverns of Knalga. They had reached the realms "
-#| "of the orcs, with the elves hot on their trail. And there was no exit "
-#| "from those caves."
 msgid ""
 "There was no exit for the dwarves. They had reached the realms of the orcs, "
 "with the elves hot on their trail. There was truly no exit from these caves."
 msgstr ""
-"Non c’era uscita dalle caverne di Knalga. Raggiunsero i regni degli orchi "
-"con gli elfi alle calcagna. E non c’era via di scampo da queste caverne."
+"Non c’era uscita per i nani. Raggiunsero i regni degli orchi con gli elfi "
+"alle calcagna. E non c’era via di scampo da queste caverne."
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:164
@@ -3679,10 +3649,6 @@ msgstr "Altolà! Cosa sei venuto a fare a Weldyn, capitale di Wesnoth?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:103
-#, fuzzy
-#| msgid ""
-#| "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
-#| "the northlands."
 msgid ""
 "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
 "the Northlands."
@@ -3717,10 +3683,6 @@ msgstr "Entra, Alanin, e porgi al re il tuo messaggio."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:126
-#, fuzzy
-#| msgid ""
-#| "My King, fifteen years ago you sent me on a mission into the northlands. "
-#| "I have returned. What do you wish to know of my mission?"
 msgid ""
 "My King, fifteen years ago you sent me on a mission into the Northlands. I "
 "have returned. What do you wish to know of my mission?"
